# road-surface-classification

./: .dvcconfig  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  DVC_SETUP.md  KAGGLE.md  KAGGLE_SECRETS.md  Makefile  mlflow.db  pyproject.toml
.dvc/: config
.github/workflows/: lint.yml  tests-full.yml  tests.yml
app/: config.py  main.py  window.py  worker.py
app/models/: audio_model.py  model_loader.py  svm_model.joblib  svm_model_1sec.joblib
configs/: base.yaml  train_config.yaml
configs/audio/models/: efficientnet_b0.yaml  resnet18_mel.yaml  simple_cnn.yaml
data/: raw.dvc
docs/d1zcipline/: DATASET.md  DVC_GUIDE.md  KAGGLE.md  README.md  SETUP.md
kaggle/: __init__.py  api.py  kaggle_secrets.py  kernels.py  notebook_template.ipynb  setup.py
notebooks/: 01_eda_audio.ipynb  __init__.py
notebooks/kaggle/: train_model.ipynb
scripts/: evaluate.py  kaggle_setup.py  load-env.ps1  predict.py  sync_kaggle_kernel.py  train.py  train_hydra.py
src/audio/data/: datamodule.py  dataset.py  extract_audio.py  preprocessing.py  split.py  transforms.py
src/audio/models/: classifier.py  factory.py  heads.py  simple_cnn.py
src/core/: callbacks.py  config.py  device.py  logger.py  losses.py  metrics.py  mlflow_config.py  registry.py  seed.py  trainer.py
tests/audio/: test_audio_models.py  test_dataset.py  test_preprocessing.py  test_split.py  test_transforms.py
tests/core/: test_callbacks.py  test_logger.py  test_metrics.py  test_mlflow_config.py  test_registry.py
