[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "road-surface-classification"
version = "0.0.1"
description = "Road surface type classification from audio and video"
requires-python = ">=3.10"

dependencies = [
    # Core
    "torch>=2.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "wandb>=0.15",
    "mlflow>=2.10",
    "rich>=13.0",
    "tqdm>=4.65",

    # Audio
    "torchaudio>=2.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "audiomentations>=0.30",

    # Video
    "torchvision>=0.15",
    "timm>=0.9",
    "albumentations>=1.3",
    "opencv-python>=4.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

dvc = [
    "dvc>=3.60",
    "dvc-s3>=3.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]